# Console-display

./: .gitignore  CMakeLists.txt  consoleDisplayOfaTwo-dimensionalArray.pro  main.cpp
headers/: ConsoleOutput.hpp
source/: CMakeLists.txt  ConsoleOutput.cpp
tests/: CMakeLists.txt  TestConsoleOutput.cpp  main.cpp
